Fixed css and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -94,14 +94,7 @@ body {
   border: 1px solid #006dff !important;
 }
 
-.exercise-video {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  width: 387px;
-  height: 381px;
-  text-decoration: none;
-}
+
 
 @media screen and (max-width: 1200px) {
   .detail-image {
@@ -126,10 +119,7 @@ body {
     width: 320px;
   }
 
-  .exercise-video {
-    width: 320px;
-    height: 300px;
-  }
+ 
 }
 
 @media screen and (max-width: 400px) {
